--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A quick guide, with code examples included, to basic styling in React.js"
     />
     <link
       rel="stylesheet"
