--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,11 +13,10 @@
       name="description"
       content="A quick guide, with code examples included, to basic styling in React.js"
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
